# kleitos

./: .dockerignore  .env.template  .gitignore  ARCHITECTURE.md  Axion.bat  DELIVERY_GUIDE.md  INSTALL.md  KNOWN_LIMITATIONS.md  Kleitos.bat  README.md  README_LOCAL.md  RELEASE_BACKLOG.md  RELEASE_DECISIONS.md  RELEASE_HARDENING_LOG.md  RELEASE_READINESS_CHECKLIST.md  START_HERE.txt  cleanup_sockets.ps1  fix_docker.ps1  fix_inference.ps1  force_delete.ps1  healthcheck.sh  install.sh  pyproject.toml  sample_portfolio.csv  setup.sh  start.sh  stop.sh  test_api.py  test_full_pipeline.py  update.sh  wait_docker.ps1  wait_docker_long.ps1
.github/workflows/: release-local-app.yml
Axion/: Axion.bat  README.md  RELEASE_NOTES_V1.md  START_HERE.txt  requirements.txt
Axion-Installers/: README.txt
Axion-Installers/Windows/: README.txt
Axion-Installers/macOS/: README.txt
Axion/config/: prompts.yaml  risk_thresholds.yaml  settings.yaml  sources.yaml
Axion/dashboard/: index.html
Axion/docs/: INSTALL.md  SCHEMA_MIGRATIONS.md
Axion/scripts/: uninstall-mac.sh  uninstall-windows.ps1
Axion/src/: __init__.py  config.py  main.py
Kleitos.app/Contents/: Info.plist
config/: relationships.yaml  sources.yaml
config/launchd/: com.axion.core.plist  com.kleitos.core.plist  com.kleitos.openclaw.plist
dashboard/: index.html
dashboard/css/: styles.css
dashboard/js/: app.js
docs/: BETA_TEST_SCRIPT.md  CLIENT_DEMO_CARD.md  CLIENT_FAQ.md  CUSTOMER_ACCEPTANCE_CHECKLIST.md  CUSTOMER_QUICKSTART.md  DEMO_RESET.md  DEMO_RUNBOOK.md  FINAL_CUSTOMER_HANDOFF.md  INSTALLER_ROADMAP.md  OAUTH_ROADMAP.md  RELEASE_CHECKLIST.md  SECURITY_REVIEW.md  SIGNING_AND_NOTARIZATION.md  VALIDATION_CHECKLIST.md
openclaw/: openclaw-config.json
scripts/: axion-app.pyw  axion-menubar.py  axion-native.c  backup.sh  build-exe.py  build_release_zip.py  demo_launch.sh  demo_prep.py  generate-icons.py  install-mac.sh  install-windows.ps1  kleitos-menubar.py  kleitos-tray.pyw  migrate.py  prepare-delivery.py  rotate_logs.py  run_local.ps1  run_local.sh  smoke_local.py  smoke_server_startup.py  stop-kleitos.bat  support_bundle.py  uninstall-mac.sh  uninstall-windows.ps1
src/: __init__.py  config.py  main.py  version.py
src/agents/: analysis.py  classification.py  collection.py  coverage_qa.py  intake.py  risk.py
src/api/: deps.py  middleware.py
src/corporate_events/: __init__.py  athex.py  manual_import.py  matcher.py
src/database/: connection.py  migrations.py  models.py
src/events/: store.py
src/impact/: engine.py  rules.py
src/intelligence/: __init__.py  actions.py  backfill.py  listing.py  navigation.py  notifications.py  policy.py  summary.py  traceability.py
src/ledger/: portfolio.py
src/llm/: context.py  grounded.py  provider_status.py
src/reporting/: digests.py  email.py
src/scheduler/: jobs.py
src/security_master/: classifier.py  exposure.py
src/sources/: fetcher.py  registry.py  source_status.py
tests/: conftest.py
tests/e2e/: conftest.py  test_e2e_core_flows.py  test_e2e_phase9l_operator_ux.py  test_e2e_phase9m_live_updates.py  test_e2e_phase9n_actionable_ux.py  test_e2e_phase9o_traceability.py  test_e2e_phase9p_inbox.py  test_e2e_phase9q_deep_links.py  test_e2e_phase9r_shareable.py  test_e2e_phase9s_history.py  test_e2e_phase9t_action_state.py  test_e2e_phase9u_saved_views.py  test_e2e_phase9v_filter_polish.py  test_e2e_phase9w_alerts_hardening.py
tests/integration/: test_event_detail_api.py  test_factor_pipeline_runtime.py  test_impact_pipeline.py  (+11 more)
(+257 files in other folders)
